test/util/framework/artifacts/serving_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agnhost-server
  labels:
    app: agnhost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agnhost
  template:
    metadata:
      labels:
        app: agnhost
    spec:
      containers:
      - name: agnhost
        image: registry.k8s.io/e2e-test-images/agnhost:2.39
        args:
        - serve-hostname
        - --port=8080
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
