test/util/framework/artifacts/serving_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agnhost
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: agnhost
  type: ClusterIP
